--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.2",
-        "kba-team/serial-port": "^1.0"
+        "kba-team/serial-port": "^1.0",
+        "kba-team/byte-debug": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5"
